refactored header navigation. Using flex and simplified CSS, fixed extra spaces and different button sizes

--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -26,49 +26,23 @@
 .other-modules-wrapper {
   grid-row: 1 / span 1;
   grid-column: 1 / span 5;
-  display: grid;
   align-content: center;
+}
+
+.other-modules-inner-container {
+  display: flex;
+}
+
+.module-button {
+  width: 160px;
+  margin-left: 3px;
+  margin-right: 3px;
 }
 
 .user-info {
   grid-row: 1 / span 2;
   grid-column: 10 / span 1;
   cursor: pointer;
-}
-
-.principal-button {
-  grid-row: 1 / span 1;
-  grid-column: 1 / span 1;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-.service-button {
-  grid-row: 1 / span 1;
-  grid-column: 2 / span 1;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-.report-button {
-  grid-row: 1 / span 1;
-  grid-column: 3 / span 1;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-.management-button {
-  grid-row: 1 / span 1;
-  grid-column: 4 / span 1;
-  margin-left: 5px;
-  margin-right: 5px;
-}
-
-.uat-button {
-  grid-row: 1 / span 1;
-  grid-column: 5 / span 1;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 .principal-title {
